# improved-crawler

./: .gitignore  README.md  app.py  example_json  pyproject.toml
cdk.out/: CrawlerStack.assets.json  CrawlerStack.template.json  manifest.json  tree.json
glue_job/: job.py  parquet.py
src/: cfn_stack.py  stack.py
